# ATHENA-X

./: .gitignore  README.md  vlm-result-01.json  vlm-result-02.json  vlm-result-03.json  vlm-result-04.json  vlm-result-05.json  vlm-result-06.json  vlm-result-07.json  vlm-result-08.json  vlm-result-09.json  worklog.md
athena-x/: .env.example  .gitignore  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
athena-x/.github/workflows/: ci-agents.yml  ci-backend.yml  ci-frontend.yml  ci-plugins.yml  deploy.yml
athena-x/agents/: README.md
athena-x/agents/forecast-intelligence/: pyproject.toml
athena-x/agents/market-intelligence/: pyproject.toml
athena-x/agents/narrative-intelligence/: pyproject.toml
athena-x/agents/operations-governance/: pyproject.toml
athena-x/agents/options-intelligence/: pyproject.toml
athena-x/agents/trade-intelligence/: pyproject.toml
athena-x/apps/: README.md
athena-x/apps/nextjs-dashboard/: .eslintrc.json  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
athena-x/apps/python-backend/: Dockerfile  README.md  pyproject.toml
athena-x/configs/development/: env.yaml
athena-x/configs/production/: env.yaml
athena-x/configs/shared/: tsconfig.base.json
athena-x/configs/staging/: env.yaml
athena-x/database/: README.md
athena-x/database/ai-db/: schema.sql
athena-x/database/ai-intelligence/: schema.sql
athena-x/database/ai-memory-db/: schema.sql
athena-x/database/app/: schema.sql
athena-x/database/canonical-market/: schema.sql
athena-x/database/canonical-options/: schema.sql
athena-x/database/forecast-db/: schema.sql
athena-x/database/historical-db/: schema.sql
athena-x/database/historical-reports/: schema.sql
athena-x/database/macro-db/: schema.sql
athena-x/database/market-db/: schema.sql
athena-x/database/market-replay-db/: schema.sql
athena-x/database/migrations/: 20260101000000_init_schemas.sql  20260102000000_step_3_5_institutional_databases.sql  20260103000000_stage5_institutional_db.sql
athena-x/database/news-db/: schema.sql
athena-x/database/options-db/: schema.sql
athena-x/database/policies/: rls.sql
athena-x/database/processed-market-data/: schema.sql
athena-x/database/raw-landing/: schema.sql
athena-x/database/raw-market-data/: schema.sql
athena-x/database/seeds/: dev_symbols.sql
athena-x/database/validation-db/: schema.sql
athena-x/docs/: README.md
athena-x/docs/architecture/: README.md  STEP-1-ANALYSIS.md  STEP-2-ARCHITECTURE.md  STEP-2-REVISED.md  STEP-3.5-ARCHITECTURE.md  STEP-4-PLAN.md  STEP-4-STAGE-10-PLAN.md  STEP-4-STAGE-11-PLAN.md  STEP-4-STAGE-12-PLAN.md  STEP-4-STAGE-13-PLAN.md  STEP-4-STAGE-14-PLAN.md  STEP-4-STAGE-2-PLAN.md  STEP-4-STAGE-3-PLAN.md  STEP-4-STAGE-4-PLAN.md  STEP-4-STAGE-5-PLAN.md  STEP-4-STAGE-5.1-MODULARITY.md  STEP-4-STAGE-6-PLAN.md  STEP-4-STAGE-7-PLAN.md  STEP-4-STAGE-7-PLUGIN-PLATFORM.md  STEP-4-STAGE-8-PLAN.md  STEP-4-STAGE-9-PLAN.md  implementation-order.md
athena-x/docs/decisions/: 0001-modular-bloomberg-style-architecture.md  0002-hybrid-ai-runtime.md  0003-four-logical-databases.md  0004-dashboard-never-calculates.md  0005-supervisor-governed-agents.md  README.md
athena-x/docs/runbooks/: README.md  add-new-agent.md  add-new-plugin.md  local-dev-setup.md
athena-x/docs/templates/: PACKAGE_README_TEMPLATE.md
athena-x/engines/ai-runtime/: README.md  pyproject.toml
athena-x/engines/backtest-engine/: README.md  pyproject.toml
athena-x/engines/cross-market-plugin-engine/: pyproject.toml
athena-x/engines/data-engine/: README.md  pyproject.toml
athena-x/engines/forecast-engine/: pyproject.toml
athena-x/engines/governance-engine/: pyproject.toml
athena-x/engines/learning-engine/: README.md  pyproject.toml
athena-x/engines/narrative-engine/: pyproject.toml
athena-x/engines/onnx-runtime/: README.md  pyproject.toml
athena-x/engines/options-plugin-engine/: pyproject.toml
athena-x/engines/plugin-engine/: README.md  pyproject.toml
athena-x/engines/report-engine/: README.md  pyproject.toml
athena-x/engines/trade-engine/: pyproject.toml
athena-x/engines/validation-framework/: pyproject.toml
athena-x/infrastructure/: README.md  docker-compose.yml
athena-x/plugins/: README.md
athena-x/providers/: README.md  failover.yaml
athena-x/providers/alphavantage/: README.md  pyproject.toml
athena-x/providers/base/: README.md  pyproject.toml  types.py
athena-x/providers/cnbc/: README.md  pyproject.toml
athena-x/providers/cnn/: README.md  pyproject.toml
athena-x/providers/databento/: README.md  pyproject.toml
athena-x/providers/failover/: pyproject.toml
athena-x/providers/finnhub/: README.md  pyproject.toml
athena-x/providers/flashalpha/: README.md  pyproject.toml
athena-x/providers/fred/: README.md  pyproject.toml
athena-x/providers/polygon/: README.md  pyproject.toml
athena-x/providers/polymarket/: README.md  pyproject.toml
athena-x/providers/reuters/: README.md  pyproject.toml
athena-x/providers/sec/: README.md  pyproject.toml
athena-x/providers/simulated/: README.md  pyproject.toml
athena-x/providers/trading-economics/: README.md  pyproject.toml
athena-x/providers/wsj/: README.md  pyproject.toml
athena-x/providers/yahoo/: README.md  pyproject.toml
athena-x/runtime/: README.md  run_stage1_tests.sh
athena-x/runtime/audit-trail/: pyproject.toml
athena-x/runtime/auth/: pyproject.toml
athena-x/runtime/canonical-types/: pyproject.toml
athena-x/runtime/config/: pyproject.toml
athena-x/runtime/data-freshness/: pyproject.toml
athena-x/runtime/db-backup/: pyproject.toml
athena-x/runtime/db-events/: pyproject.toml
athena-x/runtime/db-monitoring/: pyproject.toml
athena-x/runtime/db-partitioning/: pyproject.toml
athena-x/runtime/db-roles/: pyproject.toml
athena-x/runtime/di/: pyproject.toml
athena-x/schemas/: README.md
athena-x/scripts/: README.md  deploy.sh  generate-schemas.ts  run-backtest.py  seed-db.py  setup-dev.sh
athena-x/tests/: README.md  conftest.py
athena-x/tools/: README.md
(+3338 files in other folders)
