[project]
name = "athena-x-agent-market-intelligence"
version = "0.1.0"
description = "Market Intelligence Hub + Market DNA Agent (Stage 9)"
requires-python = ">=3.11"
dependencies = [
    "athena-x-engine-cross-market-plugin-engine",
    "athena-x-runtime-event-envelope",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_agent_market_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
