[project]
name = "athena-x-agent-narrative-intelligence"
version = "0.1.0"
description = "Narrative DNA Agent + Catalyst Radar Agent (Stage 10)"
requires-python = ">=3.11"
dependencies = [
    "athena-x-engine-narrative-engine",
    "athena-x-runtime-event-envelope",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_agent_narrative_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
