[project]
name = "athena-x-agent-options-intelligence"
version = "0.1.0"
description = "SPY 0DTE Intelligence Layer - aggregation of all options metrics"
requires-python = ">=3.11"
dependencies = [
    "athena-x-engine-options-plugin-engine",
    "athena-x-runtime-event-envelope",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_agent_options_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
