[project]
name = "athena-x-agent-trade-intelligence"
version = "0.1.0"
description = "Trade DNA Agent - produces the 6th intelligence object (Stage 12)"
requires-python = ">=3.11"
dependencies = [
    "athena-x-engine-trade-engine",
    "athena-x-runtime-event-envelope",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_agent_trade_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
