[project]
name = "athena-x-backend"
version = "0.1.0"
description = "ATHENA-X Python backend — FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "nats-py>=2.7.0",
    "websockets>=13.0",
    "supabase>=2.7.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "athena-x-runtime-event-bus",
    "athena-x-runtime-logger",
    "athena-x-runtime-health-monitor",
    "athena-x-runtime-scheduler",
    "athena-x-runtime-message-queue",
    "athena-x-runtime-metrics",
    "athena-x-runtime-tracing",
    "athena-x-runtime-di",
    "athena-x-engine-data-engine",
    "athena-x-engine-ai-runtime",
    "athena-x-engine-onnx-runtime",
    "athena-x-engine-backtest-engine",
    "athena-x-engine-report-engine",
    "athena-x-engine-plugin-engine",
    "athena-x-engine-learning-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
