[project]
name = "athena-x-engine-ai-runtime"
version = "0.1.0"
description = "AI Runtime (GPU) for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "xgboost>=2.1.0",
    "catboost>=1.2.0",
    "lightgbm>=4.5.0",
    "tabpfn>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_ai_runtime"]
