[project]
name = "athena-x-engine-backtest-engine"
version = "0.1.0"
description = "Backtest Engine (vectorbt) for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "vectorbt>=0.26.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_backtest_engine"]
