[project]
name = "athena-x-engine-data-engine"
version = "0.1.0"
description = "Data Pipeline Orchestrator for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "athena-x-runtime-event-bus",
    "athena-x-runtime-logger",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_data_engine"]
