[project]
name = "athena-x-engine-governance-engine"
version = "0.1.0"
description = "Institutional Operations & Governance Engine (Stage 13)"
requires-python = ">=3.11"
dependencies = ["athena-x-runtime-logger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_governance_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
