[project]
name = "athena-x-engine-learning-engine"
version = "0.1.0"
description = "Self-Correction Engine for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.14.0",
    "numpy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_learning_engine"]
