[project]
name = "athena-x-engine-narrative-engine"
version = "0.1.0"
description = "Narrative Engine - Event Classification + Impact + Timeline + Story Generator"
requires-python = ">=3.11"
dependencies = [
    "athena-x-plugin-news-base",
    "athena-x-runtime-logger",
    "athena-x-runtime-event-envelope",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_narrative_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
