[project]
name = "athena-x-engine-onnx-runtime"
version = "0.1.0"
description = "ONNX Runtime (Browser) for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_onnx_runtime"]
