[project]
name = "athena-x-engine-plugin-engine"
version = "0.1.0"
description = "Plugin Loader & Lifecycle for ATHENA-X"
requires-python = ">=3.11"
dependencies = [

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_plugin_engine"]
