[project]
name = "athena-x-engine-plugin-engine"
version = "0.1.0"
description = "Plugin Manager + Registry + Dependency Graph + Scheduler + Config Service"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "pyyaml>=6.0.0",
    "athena-x-runtime-logger",
    "athena-x-runtime-event-envelope",
    "athena-x-plugin-indicator-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_plugin_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
