[project]
name = "athena-x-engine-report-engine"
version = "0.1.0"
description = "Report Engine (Multi-format) for ATHENA-X"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_report_engine"]
