[project]
name = "athena-x-engine-validation-framework"
version = "0.1.0"
description = "10-phase system validation framework (Stage 14)"
requires-python = ">=3.11"
dependencies = ["athena-x-runtime-logger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_engine_validation_framework"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
