[project]
name = "athena-x-provider-base"
version = "0.1.0"
description = "MarketDataProvider protocol + shared types"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "athena-x-runtime-logger",
    "athena-x-runtime-institutional-metadata",
    "athena-x-runtime-raw-archival",
    "athena-x-runtime-data-freshness",
    "athena-x-runtime-event-bus",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_provider_base"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
