[project]
name = "athena-x-provider-failover"
version = "0.1.0"
description = "Provider failover chain: Yahoo → Finnhub → Polygon → FlashAlpha → FRED → AlphaVantage"
requires-python = ">=3.11"
dependencies = [
    "athena-x-provider-base",
    "athena-x-runtime-logger",
    "athena-x-runtime-event-bus",
    "athena-x-runtime-institutional-metadata",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_provider_failover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
