[project]
name = "athena-x-provider-flashalpha"
version = "0.1.0"
description = "FlashAlpha market data provider for ATHENA-X"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0", "websockets>=13.0", "pydantic>=2.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_provider_flashalpha"]
