[project]
name = "athena-x-provider-simulated"
version = "0.1.0"
description = "Simulated provider for dev/test only — never in production"
requires-python = ">=3.11"
dependencies = [
    "athena-x-provider-base",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_provider_simulated"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
