[project]
name = "athena-x-provider-yahoo"
version = "0.1.0"
description = "Yahoo Finance provider adapter (real implementation)"
requires-python = ">=3.11"
dependencies = [
    "athena-x-provider-base",
    "athena-x-runtime-logger",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_provider_yahoo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
