[project]
name = "athena-x-runtime-audit-trail"
version = "0.1.0"
description = "Audit trail logging + deterministic replay (Stage 3 req 7)"
requires-python = ">=3.11"
dependencies = [
    "athena-x-runtime-validation-types",
    "athena-x-runtime-logger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena_x_runtime_audit_trail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
